--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "vue-cli-service serve --open"
   },
   "dependencies": {
+    "@mdi/font": "^6.7.96",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "material-design-icons-iconfont": "^6.7.0",
     "vue": "^2.6.14",
+    "vue-material-design-icons": "^5.0.0",
     "vue-router": "^3.5.1",
+    "vuetify": "^2.6.6",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
