--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@mdi/font": "^6.7.96",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "jwt-decode": "^3.1.2",
     "material-design-icons-iconfont": "^6.7.0",
     "vue": "^2.6.14",
     "vue-material-design-icons": "^5.0.0",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.6",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
